Remove is_after_hours field from Events
